# xai-vdoc-benchmark

./: .gitignore  LICENSE  Multimodal_VQA_Interpret.ipynb  README.md  metrics.py  pyproject.toml  requirements.txt  ruff.toml  test.ipynb  test.py  viz_utils.py
configs/datasets/: coco.yaml  cv_bench.yaml  mmstar.yaml  mmvp.yaml  repope.yaml  repope_oracle.yaml
configs/explainers/: atman.yaml  gradcam.yaml  gradxrollout.yaml  inputxgradients.yaml  integratedgradients.yaml  llavacam.yaml  lxt.yaml  oracle.yaml  random.yaml  rollout.yaml  tam.yaml
configs/models/: internvl.yaml  internvl_14b.yaml  llava_13b.yaml  llava_7b.yaml  qwenvl.yaml  qwenvl_7b.yaml
datasets/: README.md
notebooks/: Multimodal_VQA_Interpret.ipynb  bgl_exp.ipynb  quickstart.ipynb  tam.py  test.ipynb
scripts/: run_all.sh  run_correlation.sh
src/: benchmark.py
src/benchmarks/: coco.py  correlation_sii.py  cv_bench.py  exp_1_1.py  exp_1_2.py  mmstar.py  repope.py
src/datasets/: __init__.py  coco.py  coco2017_process.py  cv_bench.py  factory.py  mmstar.py  mmvp.py  repope.py
src/explainers/: __init__.py  atman.py  base.py  captum.py  factory.py  fixlip.py  llava_cam.py  lxt.py  oracle.py  random.py  rollout.py  tam.py  utils.py
src/explainers/fixlip_utils/: fixlip.py  plot.py  sampler.py  utils.py
src/explainers/igos_pp/: methods_helper.py  utils.py
src/explainers/igos_utils/: igos.py  methods_helper.py  utils.py
src/explainers/tam_utils/: tam.py
src/metrics/: __init__.py  base.py  faithfulness.py  faithfulness_utils.py  plausibility.py  plausibility_utils.py  shap_sii.py  utils.py
src/models/: __init__.py  base.py  config.py  factory.py  internvl.py  llava.py  qwen_vl.py
src/utils/: faithfulness_utils.py  plausibility_utils.py  result_utils.py  viz_utils.py  xai_utils.py
