[project]
name = "xai-vdoc-retrieval-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.48.2",
    "captum>=0.7.0",
    "colpali-engine>=0.3.13",
    "datasets>=4.4.1",
    "einops>=0.8.1",
    "fitz>=0.0.1.dev2",
    "ipywidgets>=8.1.8",
    "lxt>=2.1",
    "numpy==2.3.5",
    "opencv-python>=4.11.0.86",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.4.10",
]
