[project]
name = "xai-vdoc-retrieval-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.48.2",
    "captum>=0.7.0",
    "colpali-engine>=0.3.13",
    "datasets>=4.4.1",
    "einops>=0.8.1",
    "fiftyone>=1.13.0",
    "fitz>=0.0.1.dev2",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "lxt>=2.1",
    "nltk>=3.9.2",
    "numpy==2.3.5",
    "opencv-contrib-python>=4.13.0.92",
    "pycocotools>=2.0.11",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.2",
    "shapiq>=1.4.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.4.10",
]
